appId: com.bhrenno.appstarterangular
---
- launchApp
- assertVisible: 'Welcome back'
- takeScreenshot: login
- tapOn: 'Sign in'
- assertVisible: 'Enter your password.'
- tapOn:
    id: login-password
- inputText: password
- takeScreenshot: login-keyboard
- hideKeyboard
- tapOn: 'Sign in'
- assertVisible: 'Mock User'
- takeScreenshot: home-light
- tapOn: 'Dark'
- takeScreenshot: home-dark
- stopApp
- launchApp
- assertVisible: 'Mock User'
- takeScreenshot: restored-home
- tapOn: 'Light'
- tapOn: 'System'
- tapOn: 'Sign out'
- assertVisible: 'Welcome back'
